--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all contributors to the repository.
 
 Nihad Goylarov <goylerov04@gmail.com>
-Nariman Aliyev <>
+Nariman Aliyev <nnaliyev75@gmail.com>
 Kenan Mirzazade <kananmirzazada@gmail.com>
