--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all contributors to the repository.
 
-Kanan Mirzazade [7748@holbertonstudent.com]
-Nariman Aliyev [7771@holbertonstudent.com]
-Nihad Goylerov [7771@holbertonstudent.com]
+Kanan Mirzazade <7748@holbertonstudent.com>
+Nariman Aliyev <7771@holbertonstudent.com>
+Nihad Goylerov <7771@holbertonstudent.com>
